feat: pre-commitを追加

--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint": "yarn lint:eslint && yarn lint:prettier",
+    "format": "yarn lint:prettier && yarn format:eslint",
+    "lint:eslint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:prettier": "prettier --check src/**/*.ts test/**/*.ts",
     "format:eslint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format:prettier": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "fix": "yarn format && yarn lint",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
