--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@nestjs/common": "8.4.0",
     "@nestjs/config": "1.2.0",
     "@nestjs/core": "8.4.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "8.4.0",
     "@nestjs/swagger": "5.2.0",
     "@nestjs/typeorm": "8.0.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pg": "8.7.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
@@ -45,18 +48,22 @@
     "typeorm": "0.2.45"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@nestjs/cli": "8.2.2",
     "@nestjs/schematics": "8.0.7",
     "@nestjs/testing": "8.4.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.26",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.13.0",
     "@typescript-eslint/parser": "5.13.0",
     "eslint": "8.10.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
+    "husky": "^7.0.4",
     "jest": "27.5.1",
     "prettier": "2.5.1",
     "source-map-support": "0.5.21",
@@ -65,10 +72,7 @@
     "ts-loader": "9.2.7",
     "ts-node": "10.7.0",
     "tsconfig-paths": "3.13.0",
-    "typescript": "4.6.2",
-    "husky": "^7.0.4",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1"
+    "typescript": "4.6.2"
   },
   "jest": {
     "moduleFileExtensions": [
