--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format:eslint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format:prettier": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "fix": "yarn format && yarn lint",
-    "test": "jest",
+    "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
