--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "yarn lint:eslint && yarn lint:prettier",
+    "lint": "yarn lint:tsc && yarn lint:eslint && yarn lint:prettier",
     "format": "yarn lint:prettier && yarn format:eslint",
     "lint:eslint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:prettier": "prettier --check src/**/*.ts test/**/*.ts",
+    "lint:tsc": "tsc --noEmit",
     "format:eslint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format:prettier": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "fix": "yarn format && yarn lint",
