--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "8.4.3",
     "@nestjs/config": "2.0.0",
     "@nestjs/core": "8.4.3",
+    "@nestjs/graphql": "^10.0.8",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "8.4.3",
     "@nestjs/swagger": "5.2.1",
     "@nestjs/typeorm": "8.0.3",
+    "apollo-server-express": "^3.6.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "graphql": "^16.3.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
