chore: change condition of ci

--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -9,6 +9,7 @@ name: Check pull request
       - './test/**/*.ts'
       - 'package.json'
       - 'config/**/*.ts'
+      - 'yarn.lock'
 
 jobs:
   build:
